# SmaTelcom

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.private/rules/: smartelcom-license.mdc  smatelcom-license.mdc
LICENSES/: LICENSE_RULES.md
data/: audit.db
knowledge_base/: cisco_ios_cli_map.txt  core_safety_policy.txt  huawei_vrp_cli_map.txt  ran_congestion_playbook.txt  topology_reference.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapters.rs  agents.rs  audit.rs  commands.rs  db.rs  digital_twin.rs  drivers.rs  error.rs  executor.rs  guardrails.rs  lib.rs  main.rs  network_connector.rs  northbound.rs  ollama.rs  rag.rs  roi.rs  telemetry.rs
src/components/: TopologyMap.tsx
src/components/cli/: CommandInput.tsx
src/components/dashboard/: ActivityLog.tsx  AuditTrailView.tsx  EvidencePanel.tsx  ImpactReport.tsx  LiveConsole.tsx  NetworkHealth.tsx  NorthboundDrivers.tsx  ReasoningSidebar.tsx  RoiCalculator.tsx
src/components/hitl/: CriticalAlert.tsx
src/components/layout/: CommandPalette.tsx  Sidebar.tsx
src/hooks/: useTheme.tsx
src/lib/: tauri.ts  types.ts
