[package]
name = "smatelcom"
version = "0.1.0"
description = "SmaTelcom — Local-first Desktop AI Orchestrator for Telecommunications Network Management (AN Level 4)"
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
edition = "2021"
license = "LicenseRef-SmaTelcom-Private"

[lib]
name = "smatelcom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
regex = "1"
walkdir = "2"
pdf-extract = "0.8"
once_cell = "1"
tracing = "0.1"
rand = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
